Cleanup: remove generated artifacts; ignore runtime outputs and local settings
Removed from tracking:
- semantic/artifacts/ (5 files) - runtime-generated suite outputs

Updated .gitignore to exclude:
- artifacts/ (runtime execution outputs)
- semantic/artifacts/ (semantic suite outputs)
- semantic/regression/runs/ (regression check outputs)
- .claude/settings.local.json (local IDE settings)

Updated semantic/.gitignore to not override parent ignore rules.

Updated INTEGRATED_WALKTHROUGH.md to clarify artifact paths are
generated at runtime and not committed to repository.

Deleted from disk (were untracked):
- artifacts/ (~311MB, 9000+ files)
- semantic/regression/runs/ (~40KB)
- .claude/settings.local.json

--- a/semantic/.gitignore
+++ b/semantic/.gitignore
@@ -1,3 +1,2 @@
-# Override parent gitignore for semantic artifacts
-# Semantic artifacts are derived but tracked for attestation
-!artifacts/
+# Semantic layer runtime artifacts are generated and not tracked
+# See root .gitignore for ignore rules
